# banking-operations

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: decorators.py  external_api.py  generators.py  main.py  masks.py  processing.py  transaction_reader.py  utils.py  widget.py
tests/: conftest.py  mylog.txt  test_decorators.py  test_external_api.py  test_generators.py  test_main.py  test_masks.py  test_processing.py  test_transaction_reader.py  test_utils.py  test_widget.py
